data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_646.wast
;; 7. **`br_if` in a Loop:**    - A `br_if` placed inside a loop with varying condition values. Verify if the branch correctly takes or skips according to the condition on each iteration.    - Constraint Checked: Conditional evaluation within loops.    - Relation: Tests dynamic condition evaluation in iterative contexts.

(assert_invalid
  (module
    (func $br_if-in-loop
      (loop $loop
        (i32.const 0)
        (br_if $loop (i32.eqz (local.get 0)))
        (i32.const 1)
        (br_if 1)
      )
    )
  )
  "type mismatch"
)